configmaps-and-secrets/configmaps/configvolume.yaml
apiVersion: v1
kind: Pod
metadata:
  name: config-volume
spec:
  containers:
    - name: test-container
      image: teamcloudyuga/nginx:alpine
      volumeMounts:
      - name: config-volume
        mountPath: /tmp/config
  volumes:
    - name: config-volume
      configMap:
        name: customer1
  restartPolicy: Never
